# graphics_learn

./: CMakeLists.txt
include/glad/: glad.h
src/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  config.h  glad.c  main.cpp  shaderClass.cpp  shaderClass.h
src/engine/objects/: Cube.cpp  Cube.h  Object.h
src/engine/tools/: EBO.cpp  EBO.h  VAO.cpp  VBO.cpp  VBO.h  shaderClass.h
src/shaders/: default.frag  default.vert
